--- a/View Color Control/Base.lproj/Main.storyboard
+++ b/View Color Control/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_0" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="gn2-BH-5lt">
+    <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -8,38 +8,38 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Color View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="View_Color_Control" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ColorViewController" customModule="View_Color_Control" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bab-Gh-H7D">
-                                <rect key="frame" x="40" y="67" width="310" height="131"/>
+                                <rect key="frame" x="40" y="20" width="240" height="178"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="tTS-nR-bUd">
-                                <rect key="frame" x="16" y="252" width="48" height="86"/>
+                                <rect key="frame" x="16" y="252" width="48" height="86.5"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="23" translatesAutoresizingMaskIntoConstraints="NO" id="QZX-B1-zpI">
-                                        <rect key="frame" x="0.0" y="0.0" width="35" height="86"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="35" height="86.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Red:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lBW-eQ-wFy">
-                                                <rect key="frame" x="0.0" y="0.0" width="35" height="13.333333333333334"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="35" height="13.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Green:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SF6-1d-It9">
-                                                <rect key="frame" x="0.0" y="36.333333333333314" width="35" height="13.333333333333336"/>
+                                                <rect key="frame" x="0.0" y="36.5" width="35" height="13.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Blue:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cpb-Z1-F1n">
-                                                <rect key="frame" x="0.0" y="72.666666666666686" width="35" height="13.333333333333329"/>
+                                                <rect key="frame" x="0.0" y="73" width="35" height="13.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
@@ -47,22 +47,22 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="23" translatesAutoresizingMaskIntoConstraints="NO" id="kQw-74-GvW">
-                                        <rect key="frame" x="41" y="0.0" width="7" height="86"/>
+                                        <rect key="frame" x="41" y="0.0" width="7" height="86.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OO3-c1-Z8C">
-                                                <rect key="frame" x="0.0" y="0.0" width="7" height="13.333333333333334"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="7" height="13.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uhA-4y-NR5">
-                                                <rect key="frame" x="0.0" y="36.333333333333314" width="7" height="13.333333333333336"/>
+                                                <rect key="frame" x="0.0" y="36.5" width="7" height="13.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uNX-dc-qxc">
-                                                <rect key="frame" x="0.0" y="72.666666666666686" width="7" height="13.333333333333329"/>
+                                                <rect key="frame" x="0.0" y="73" width="7" height="13.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
@@ -76,7 +76,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="minimumTrackTintColor" systemColor="systemRedColor"/>
                                 <connections>
-                                    <action selector="redSliderValueChanged" destination="BYZ-38-t0r" eventType="valueChanged" id="DKy-2t-xCZ"/>
+                                    <action selector="sliderAction:" destination="BYZ-38-t0r" eventType="valueChanged" id="Ocd-sj-QA0"/>
                                 </connections>
                             </slider>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1" id="oDA-rS-t9O">
@@ -84,7 +84,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="minimumTrackTintColor" systemColor="systemGreenColor"/>
                                 <connections>
-                                    <action selector="greenSliderValueChanged" destination="BYZ-38-t0r" eventType="valueChanged" id="TPQ-zs-q9z"/>
+                                    <action selector="sliderAction:" destination="BYZ-38-t0r" eventType="valueChanged" id="nJa-GB-cMF"/>
                                 </connections>
                             </slider>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1" id="ZhL-M5-Ox2">
@@ -92,37 +92,82 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="minimumTrackTintColor" systemColor="systemBlueColor"/>
                                 <connections>
-                                    <action selector="blueSliderValueChanged" destination="BYZ-38-t0r" eventType="valueChanged" id="Hhn-ZE-5zw"/>
+                                    <action selector="sliderAction:" destination="BYZ-38-t0r" eventType="valueChanged" id="BXY-vV-SqO"/>
                                 </connections>
                             </slider>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x5F-1J-VKt">
+                                <rect key="frame" x="123" y="466" width="74" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="d5G-cm-oJd"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Done"/>
+                                <connections>
+                                    <action selector="doneButtonDidTap" destination="BYZ-38-t0r" eventType="touchUpInside" id="hHE-yd-CfW"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.28190852353187057" green="0.32790857335110135" blue="0.55840209402988861" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="l7e-h3-mEo" firstAttribute="top" secondItem="bab-Gh-H7D" secondAttribute="bottom" constant="46" id="7xe-9t-4hI"/>
                             <constraint firstItem="bab-Gh-H7D" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Kbm-x1-AWL"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="x5F-1J-VKt" secondAttribute="bottom" constant="67" id="O7o-wQ-xQh"/>
                             <constraint firstItem="bab-Gh-H7D" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="S6U-e8-Gt1"/>
                             <constraint firstItem="bab-Gh-H7D" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="Zbn-iA-mF9"/>
+                            <constraint firstItem="x5F-1J-VKt" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="a3P-J0-LRb"/>
                             <constraint firstItem="QZX-B1-zpI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="cNj-Cq-6zh"/>
                             <constraint firstItem="tTS-nR-bUd" firstAttribute="top" secondItem="bab-Gh-H7D" secondAttribute="bottom" constant="54" id="zxN-k6-YwV"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="blueColorBoard" destination="uNX-dc-qxc" id="Hup-JF-lEh"/>
-                        <outlet property="blueColorSlider" destination="ZhL-M5-Ox2" id="u8V-am-BC4"/>
+                        <outlet property="blueColorSlider" destination="ZhL-M5-Ox2" id="U7h-ur-VpN"/>
                         <outlet property="colorView" destination="bab-Gh-H7D" id="ipw-PT-jfG"/>
                         <outlet property="greenColorBoard" destination="uhA-4y-NR5" id="7N1-UY-DRT"/>
-                        <outlet property="greenColorSlider" destination="oDA-rS-t9O" id="rqI-Ln-JaV"/>
+                        <outlet property="greenColorSlider" destination="oDA-rS-t9O" id="ISB-KU-MOI"/>
                         <outlet property="redColorBoard" destination="OO3-c1-Z8C" id="X1Z-4Y-n1X"/>
-                        <outlet property="redColorSlider" destination="l7e-h3-mEo" id="ayX-PK-gsT"/>
+                        <outlet property="redColorSlider" destination="l7e-h3-mEo" id="dUq-0y-bzm"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="33.846153846153847" y="2.8436018957345972"/>
+            <point key="canvasLocation" x="1378" y="71"/>
+        </scene>
+        <!--Main View Controller-->
+        <scene sceneID="f6c-Sn-9N7">
+            <objects>
+                <viewController id="gn2-BH-5lt" customClass="MainViewController" customModule="View_Color_Control" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="yHb-cu-xUa">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tUI-fy-pig">
+                                <rect key="frame" x="253" y="20" width="51" height="34"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="square.and.pencil" catalog="system"/>
+                                <connections>
+                                    <segue destination="BYZ-38-t0r" kind="presentation" modalPresentationStyle="fullScreen" id="Bxp-rw-ZMf"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="nIb-s6-Jkh"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="tUI-fy-pig" firstAttribute="top" secondItem="nIb-s6-Jkh" secondAttribute="top" constant="20" id="EHy-UE-r1r"/>
+                            <constraint firstItem="tUI-fy-pig" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="nIb-s6-Jkh" secondAttribute="leading" constant="229" id="iZk-NH-Q2i"/>
+                            <constraint firstItem="nIb-s6-Jkh" firstAttribute="trailing" secondItem="tUI-fy-pig" secondAttribute="trailing" constant="16" id="uVj-6j-f4A"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SSg-ME-M7D" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="435" y="71"/>
         </scene>
     </scenes>
     <resources>
+        <image name="square.and.pencil" catalog="system" width="128" height="113"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
